design de la photo de profile et des contacts

--- a/index.html
+++ b/index.html
@@ -12,7 +12,30 @@
 
     <div class="container">
 
+        <div class="profile">
+            <div class="picture_profile">
+                <a href="assets/images/profile_david.jpg" target="_blank"> <img src="assets/images/profile_david.jpg" alt="profile_pic"></a>
+                <span>Zoomer sur l'image</span>
+            </div>
+            <h3 class="profile_name">Sorel David</h3>
+            <p class="profile_job">Developper web junior</p>
+        </div>
 
+        <div class="profile_infos">
+            <div class="infos_left">
+                <a href="https://www.google.ci/maps/@5.343924,-4.0645722,12z?hl=fr" target="_blank">12 rue des olivers
+                    <br>
+                    53200 La Roche-Neuville
+                </a>
+
+            </div>
+            <div class="infos_center">
+                <a href="mailto:someone@example.com">sorelngoran20@gmail.com</a>
+            </div>
+            <div class="infos_right">
+                <a href="tel:+33612345678">0606060606</a>
+            </div>
+        </div>
 
 
     </div>
