design de la partie content

--- a/index.html
+++ b/index.html
@@ -38,6 +38,108 @@
         </div>
 
 
+        <div class="main">
+
+            <div class="left">
+
+                <div class="left_box">
+
+                    <h3>A propos</h3>
+
+                    <div>
+                        <p>
+                            Etudiant en BTS informatique,je suis a la recherche d'un poste de developpeur web dans le cadre d'un contrat d'apprentissage.
+                        </p>
+                    </div>
+
+                </div>
+
+
+                <div class="left_box">
+
+                    <h3>Langues parlées</h3>
+                    <ul>
+                        <li>Francais - Langues maternelle</li>
+                        <li>Anglais - Intermédiaire</li>
+                        <li>Espagnol - Débutant</li>
+                    </ul>
+
+                </div>
+
+                <div class="left_box">
+                    <h3 class="about">Centres d'interêt</h3>
+                    <ul>
+                        <li>Chant</li>
+                        <li>Fitness</li>
+                        <li>Randonnées</li>
+                        <li>Voyages</li>
+                    </ul>
+                </div>
+
+            </div>
+
+            <div class="right">
+
+                <div class="right_box">
+                    <div class="title"><h2>Expériences professionnelles</h2></div>
+                    <div class="box_content">
+                        <div class="intitule"><h3>SERVEUR/NOOM HOTEL</h3></div>
+                        <div class="date">Avril 2021-Septembre 2021</div>
+                        <ul class="list">
+                            <li><span>Employé polyvalent: Caisse, plonge, service à l'assiette.</span></li>
+                        </ul>
+                    </div>
+                    <div class="box_content">
+                        <div class="intitule"><h3>SERVEUR/NORIMA</h3></div>
+                        <div class="date">Mai 2019-Juillet 2021 </div>
+                        <ul class="list">
+                            <li><span>Employé polyvalent:Préparation de salle,service a l'assiette,dressage de table</span></li>
+                        </ul>
+                    </div>
+
+                    <div class="box_content">
+                        <div class="intitule"><h3>SERVEUR/PULLMAN</h3></div>
+                        <div class="date">Avril 2020 -Août 2020 </div>
+                        <ul class="list">
+                            <li><span>Employé polyvalent: Service de table.</span></li>
+                        </ul>
+                    </div>
+
+                </div>
+
+                <div class="right_box ">
+                    <div class="title"><h2>Diplomes/Formations </h2></div>
+                    <div class="box_content">
+                        <div class="intitule"><h3>Nom du diplome: BACCALAUREAT D</h3></div>
+                        <div class="date">2020-2021 </div>
+                        <div class="intitule"><p> INSTIUT SCOLAIRE LAVOISIER</p></div>
+                    </div>
+
+                    <div class="box_content">
+                        <div class="intitule"><h3>Licence 1 en RH</h3></div>
+                        <div class="date">2021-2022 </div>
+                        <div class="intitule"><p>ESYM</p></div>
+                    </div>
+                </div>
+
+                <div class="right_box">
+                    <div class="title"><h2>Compétences </h2></div>
+                    <div class="box_content">
+                        <ul class="list">
+                            <li>Designer web</li>
+                            <li>Monteur Vidéos</li>
+                            <li>Développeur web</li>
+                        </ul>
+                    </div>
+
+
+                </div>
+            </div>
+
+
+        </div>
+
+
     </div>
 
 </body>
