--- a/index.html
+++ b/index.html
@@ -139,6 +139,17 @@
 
         </div>
 
+        <div class="footer">
+            <ul class="social_icons">
+                <li><img src="assets/icons/linkedin.png" alt="linkedin"></li>
+                <li><img src="assets/icons/twitter.png" alt="twiter"></li>
+                <li ><img src="assets/icons/github.png" alt="github" class="github_icon"></li>
+                <li><img src="assets/icons/facebook.png" alt="facebook" class="github_icon"></li>
+            </ul>
+            <p>Dernière mise à jour le 10 Aout 2022</p>
+        </div>
+
+
 
     </div>
 
